added Blogs Page and other changes

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,22 +34,22 @@ body {
 }
 
 h1 {
-  @apply text-7xl font-extrabold;
+  @apply text-6xl font-extrabold;
 }
 h2 {
   @apply text-5xl font-bold;
 }
 h3 {
-  @apply text-3xl font-bold;
+  @apply text-2xl font-semibold;
 }
 h4 {
-  @apply text-2xl font-bold;
-}
-h5 {
   @apply text-xl font-bold;
 }
-h6 {
+h5 {
   @apply text-lg font-bold;
+}
+h6 {
+  @apply text-base font-bold;
 }
 p {
   @apply text-base;
